--- a/project-rest/pom.xml
+++ b/project-rest/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.4.0</version>
         </dependency>
     </dependencies>
 
@@ -25,6 +26,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.4.0</version>
             </plugin>
         </plugins>
     </build>
